--- a/MovieAPI/appsettings.json
+++ b/MovieAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "MovieDbConnection": "Server=.\\sql2019; Database=MovieDB; Trusted_Connection=True"
+  },
   "AllowedHosts": "*"
 }
