--- a/BussinesServices.Tests/Services.Tests.csproj
+++ b/BussinesServices.Tests/Services.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="Shouldly" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
